# simple-footnotes

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/: FUNDING.yml
.github/workflows/: main.yml
pelican/plugins/simple_footnotes/: __init__.py  simple_footnotes.py  test_simple_footnotes.py
