[tool.poetry]
name = "pelican-simple-footnotes"
version = "1.0.2"
description = "Pelican plugin to add footnotes to articles and pages"
authors = ["Stuart Langridge <sil@kryogenix.org>", "Justin Mayer <entrop@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["footnotes", "pelican", "plugin"]
repository = "https://github.com/pelican-plugins/simple-footnotes"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/sitemap/issues"

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.5"
html5lib = "^1.1"
markdown = {version = "^3.2.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^23"
flake8 = "^3.9"
flake8-black = "^0.3"
invoke = "^2.0"
isort = "^5.4"
markdown = "^3.2.2"
pytest = "^6.0"
pytest-cov = "^2.7"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.6"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Simple Footnotes"
git-username = "botpub"
git-email = "botpub@autopub.rocks"

[tool.isort]
# Maintain compatibility with Black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

known_third_party = [
    "html5lib",
]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
